* Version 0.8.0
  * Use "setcobd=async" to enable asynchronous mode for cobd devices.
  * New: cofs supports flat file modes "rwx" for owner.

  Console and daemons:
  * New network "ndis-bridge" works in kernel mode and is the faster
    alternative to pcap-bridge. (Ligong Liu)
  * Bug #2013501: Stop with error message on empty parameters.

  Kernel:
  * scsi: New device for images with partition tables and works async.
    Usage "scsi0=disk,file.img" or "scsi1=cdrom,file.iso" (Steve Shoecraft)
  * Added virtual pci device handling. "lspci" is working (Steve Shoecraft)
  * Add PG_co_host_mapped, save many OS switching times: speed up coLinux.
  * unionfs-2.2.4 added as module. (Marwan Al-Sabbagh)
  * New: /proc/colinux/stats show counts of OS switches.
  * Add sysenter / sysexit restoration support, for cpu with SEP feature.

  Debugging:
  * Enable host kernel debug via registry [HKLM\SOFTWARE\coLinux] "Debug"

  Updated libraries and tools:
  * mingw 3.14
  * w32api 3.11

  Docs:
  * Wiki moved from colinux.wikia.com to http://wiki.colinux.org

* Version 0.7.3
  Bugfixes:
  * Check ELF header before accessing kernel vmlinux (fix exception).
  * Fix problems with memory hole from shared video cards and the
    error message "PFN to high".
  * Bugfix host freeze after "Using IPI Shortcut mode" and other randomly
    crashes at mounting the root file system with types ext2 or ext3.

  Daemon:
  * Add build date to exe file properties.
  * View build timestamp of ntkernel driver with --status-driver.
  * Bug #1861876: Random created MAC stored in Registry to have same on
    every start. [HKCU\Software\coLinux]
  * Bugfix: Image files >=4GB fails with size error on parameter "-v 3".
  * Workarround for unresponsive key inputs on Vista flooded nt-console.
    Linux driver will sleep now, if message queues have to many entries and
    user task is busy. Network daemons drivers changed also into this mode.