@@ -1,6 +1,7 @@
 * Version 0.8.0
   * Use "setcobd=async" to enable asynchronous mode for cobd devices.
-  * New: cofs supports flat file modes "rwx" for owner.
+  * New: cofs supports flat file modes "rwx" for owner.  Mount option
+    "noattrib" disables these attribute mapping for compatibility.
 
   Console and daemons:
   * New network "ndis-bridge" works in kernel mode and is the faster
